# fash-cli

./: .gitignore  Cargo.toml  PERSONA.md  README.md  TODO.md
src/: agent.rs  agent_tool.rs  cli.rs  config.rs  gemini.rs  main.rs  parser.rs  persona.rs  task_part.rs
