[package]
name = "agent-base"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
directories = "5.0"
toml = "0.8"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
chrono = "0.4.41"
rand = "0.9.1"
